# Lab_6

./: CMakeLists.txt  Lab_6.cpp
inc/: has8.h  mas_fill.h  num_swap.h
src/: has8.cpp  mas_fill.cpp  num_swap.cpp
